--- a/index.html
+++ b/index.html
@@ -1,37 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>P2P UDP Chat - Worker: <span id="workerIdSpan"></span></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>P2P UDP Chat - Worker: <span id="workerIdSpan">Loading...</span></title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { font-family: sans-serif; margin: 10px; background-color: #f4f4f4; }
-        #chatbox { width: 95%; height: 300px; border: 1px solid #ccc; overflow-y: scroll; padding: 10px; background-color: #fff; margin-bottom: 10px; }
-        #messageInput { width: 80%; padding: 10px; margin-right: 5px; border: 1px solid #ccc; }
-        #sendButton { padding: 10px; background-color: #5cb85c; color: white; border: none; cursor: pointer; }
-        #sendButton:hover { background-color: #4cae4c; }
-        .message { margin-bottom: 5px; padding: 5px; border-radius: 3px; }
-        .local { background-color: #d1e7dd; text-align: right; margin-left: 20%; }
-        .peer { background-color: #f8d7da; text-align: left; margin-right: 20%;}
-        .system { background-color: #e2e3e5; color: #555; font-style: italic; font-size: 0.9em;}
-        #status { margin-top: 10px; font-size: 0.9em; color: #777; }
-        #peerInfo { margin-top: 5px; font-size: 0.9em; color: #337ab7; }
-        #benchmarkSection { margin-top: 20px; padding: 10px; border: 1px solid #ddd; background-color: #e9ecef; }
-        #benchmarkStatus { margin-top: 5px; font-size: 0.9em; color: #198754; }
+        /* Custom scrollbar for webkit browsers */
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 8px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 10px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: #888;
+            border-radius: 10px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
     </style>
 </head>
-<body>
-    <h1>P2P UDP Chat - Worker: <span id="workerIdSpan"></span></h1>
-    <div id="status">Connecting to local worker backend...</div>
-    <div id="peerInfo">Peer: Not connected</div>
-    <div id="chatbox"></div>
-    <input type="text" id="messageInput" placeholder="Type message..."/>
-    <button id="sendButton">Send</button>
+<body class="bg-gray-200 flex flex-col items-center justify-start min-h-screen p-4 text-gray-800 antialiased">
 
-    <div id="benchmarkSection">
-        <h3>P2P UDP Throughput Benchmark</h3>
-        <label for="benchmarkSize">Data Size (KB):</label>
-        <input type="number" id="benchmarkSize" value="1024" min="1"/>
-        <button id="startBenchmarkButton">Start Benchmark Send</button>
-        <div id="benchmarkStatus">Benchmark status will appear here.</div>
+    <div class="bg-white shadow-2xl rounded-xl p-6 sm:p-8 w-full max-w-3xl my-8">
+        <h1 class="text-4xl font-bold text-center text-indigo-700 mb-3">
+            P2P UDP Chat
+        </h1>
+        <div class="text-center text-base text-gray-600 mb-1">Worker ID: <span id="workerIdSpan" class="font-semibold text-indigo-600"></span></div>
+        <div id="status" class="text-center text-base text-gray-700 mb-2">Connecting to local worker backend...</div>
+        <div id="peerInfo" class="text-center text-base text-blue-700 font-medium mb-6">Peer: Not connected</div>
+
+        <div id="chatbox" class="custom-scrollbar h-96 border border-gray-300 rounded-lg p-4 overflow-y-auto mb-5 bg-gray-100 space-y-3">
+            <!-- Messages will appear here -->
+        </div>
+
+        <div class="flex items-center gap-3 mb-8">
+            <input type="text" id="messageInput" placeholder="Type your message..." class="flex-grow p-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-600 focus:border-transparent outline-none text-base shadow-sm"/>
+            <button id="sendButton" class="bg-indigo-600 hover:bg-indigo-700 active:bg-indigo-800 text-white font-semibold py-4 px-8 rounded-lg transition duration-150 ease-in-out focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 shadow-md hover:shadow-lg">
+                Send
+            </button>
+        </div>
+
+        <div id="benchmarkSection" class="mt-8 p-6 border border-gray-200 rounded-xl bg-slate-50 shadow">
+            <h3 class="text-2xl font-semibold text-gray-800 mb-4">P2P UDP Throughput Benchmark</h3>
+            <div class="flex flex-col sm:flex-row items-end gap-4">
+                <div class="flex-grow w-full sm:w-auto">
+                    <label for="benchmarkSize" class="block text-base font-medium text-gray-700 mb-1.5">Data Size (KB):</label>
+                    <input type="number" id="benchmarkSize" value="1024" min="1" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-1 focus:ring-indigo-600 focus:border-transparent outline-none text-base shadow-sm"/>
+                </div>
+                <button id="startBenchmarkButton" class="w-full sm:w-auto bg-green-600 hover:bg-green-700 active:bg-green-800 text-white font-semibold py-3 px-6 rounded-lg transition duration-150 ease-in-out focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 shadow-md hover:shadow-lg">
+                    Start Benchmark
+                </button>
+            </div>
+            <div id="benchmarkStatus" class="mt-4 text-base text-gray-700 bg-gray-100 p-4 rounded-lg min-h-[45px] shadow-inner">Benchmark status will appear here.</div>
+        </div>
     </div>
 
     <script>
@@ -46,18 +71,25 @@
         const benchmarkStatusDiv = document.getElementById('benchmarkStatus');
 
         let localUiSocket = null;
-        let myWorkerId = "Unknown"; // Will be updated by backend
+        let myWorkerId = "Unknown";
 
         function addMessage(text, type = "system", sender = "") {
             const messageDiv = document.createElement('div');
-            messageDiv.classList.add('message', type);
-            if (type === 'local' || type === 'peer') {
-                 messageDiv.textContent = `${sender}: ${text}`;
-            } else {
-                 messageDiv.textContent = text;
+            messageDiv.classList.add('p-3', 'rounded-xl', 'max-w-[90%]', 'break-words', 'shadow-sm', 'text-base');
+            let fullMessageText = text;
+
+            if (type === 'local') {
+                messageDiv.classList.add('bg-indigo-600', 'text-white', 'ml-auto', 'rounded-br-lg');
+                fullMessageText = text;
+            } else if (type === 'peer') {
+                messageDiv.classList.add('bg-slate-200', 'text-slate-800', 'mr-auto', 'rounded-bl-lg');
+                fullMessageText = sender ? `${sender}: ${text}` : text;
+            } else { // system
+                messageDiv.classList.add('bg-slate-100', 'text-slate-600', 'text-sm', 'italic', 'text-center', 'w-full', 'max-w-full', 'py-2', 'mx-auto', 'rounded-md');
             }
+            messageDiv.textContent = fullMessageText;
             chatbox.appendChild(messageDiv);
-            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+            chatbox.scrollTop = chatbox.scrollHeight;
         }
 
         function connectToLocalBackend() {
@@ -79,12 +111,16 @@
                     console.log("Message from local worker backend:", data);
                     if (data.type === "init_info") {
                         myWorkerId = data.worker_id;
-                        workerIdSpan.textContent = myWorkerId.substring(0,8) + "...";
+                        workerIdSpan.textContent = myWorkerId ? myWorkerId.substring(0,8) + "..." : "N/A";
                         addMessage(`Worker ID: ${myWorkerId}`, "system");
                          if(data.p2p_peer_id) {
                             peerInfoDiv.textContent = `P2P Connected to Peer: ${data.p2p_peer_id.substring(0,8)}...`;
                             statusDiv.textContent = "P2P Link Active.";
-                            startBenchmarkButton.disabled = false; // Enable benchmark when P2P is active
+                            startBenchmarkButton.disabled = false;
+                            startBenchmarkButton.classList.remove('opacity-50', 'cursor-not-allowed');
+                        } else {
+                            startBenchmarkButton.disabled = true;
+                            startBenchmarkButton.classList.add('opacity-50', 'cursor-not-allowed');
                         }
                     } else if (data.type === "p2p_message_received") {
                         addMessage(data.content, "peer", data.from_peer_id ? data.from_peer_id.substring(0,8)+"..." : "Peer");
@@ -93,15 +129,17 @@
                         if (data.peer_id) {
                             peerInfoDiv.textContent = `P2P Connected to Peer: ${data.peer_id.substring(0,8)}...`;
                             statusDiv.textContent = "P2P Link Active.";
-                            startBenchmarkButton.disabled = false; // Enable benchmark when P2P is active
+                            startBenchmarkButton.disabled = false;
+                            startBenchmarkButton.classList.remove('opacity-50', 'cursor-not-allowed');
                         } else {
                              peerInfoDiv.textContent = "Peer: Not connected";
                              if (!data.message.toLowerCase().includes("lost")) {
                                 statusDiv.textContent = "P2P Link Inactive.";
                              }
-                             startBenchmarkButton.disabled = true; // Disable benchmark if no P2P
+                             startBenchmarkButton.disabled = true;
+                             startBenchmarkButton.classList.add('opacity-50', 'cursor-not-allowed');
                         }
-                    } else if (data.type === "benchmark_status") { // NEW: Handle benchmark status messages
+                    } else if (data.type === "benchmark_status") {
                         benchmarkStatusDiv.textContent = data.message;
                         addMessage(`Benchmark: ${data.message}`, "system");
                     } else if (data.type === "error") {
@@ -109,13 +147,15 @@
                     }
                 } catch (e) {
                     addMessage("Received non-JSON message from backend: " + event.data, "system");
+                    console.error("Error parsing message from backend:", e, "Raw data:", event.data);
                 }
             };
 
             localUiSocket.onclose = function(event) {
                 statusDiv.textContent = "Disconnected from local worker backend. Attempting to reconnect...";
                 addMessage("Connection to local worker backend closed. Retrying in 5s...", "system");
-                startBenchmarkButton.disabled = true; // Disable on disconnect
+                startBenchmarkButton.disabled = true;
+                startBenchmarkButton.classList.add('opacity-50', 'cursor-not-allowed');
                 setTimeout(connectToLocalBackend, 5000);
             };
 
@@ -127,19 +167,25 @@
         }
 
         sendButton.onclick = function() {
-            const messageText = messageInput.value;
+            const messageText = messageInput.value.trim();
             if (messageText && localUiSocket && localUiSocket.readyState === WebSocket.OPEN) {
                 localUiSocket.send(JSON.stringify({
                     type: "send_p2p_message",
                     content: messageText
                 }));
-                addMessage(messageText, "local", "Me (" + (myWorkerId ? myWorkerId.substring(0,8)+"..." : "") + ")");
+                addMessage(messageText, "local");
                 messageInput.value = '';
-            } else {
-                addMessage("Cannot send message. Not connected to local backend or message is empty.", "system");
+            } else if (!messageText) {
+                 addMessage("Cannot send an empty message.", "system");
+            }
+            else {
+                addMessage("Cannot send message. Not connected to local backend.", "system");
             }
         };
         
+        startBenchmarkButton.disabled = true; // Initially disable
+        startBenchmarkButton.classList.add('opacity-50', 'cursor-not-allowed');
+
         startBenchmarkButton.onclick = function() {
             const sizeKb = parseInt(benchmarkSizeInput.value, 10);
             if (isNaN(sizeKb) || sizeKb <= 0) {
