--- a/index.html
+++ b/index.html
@@ -45,14 +45,10 @@
         </div>
 
         <div id="benchmarkSection" class="mt-8 p-6 border border-gray-200 rounded-xl bg-slate-50 shadow">
-            <h3 class="text-2xl font-semibold text-gray-800 mb-4">P2P UDP Throughput Benchmark</h3>
+            <h3 class="text-2xl font-semibold text-gray-800 mb-4">P2P QUIC File Transfer Benchmark</h3>
             <div class="flex flex-col sm:flex-row items-end gap-4">
-                <div class="flex-grow w-full sm:w-auto">
-                    <label for="benchmarkSize" class="block text-base font-medium text-gray-700 mb-1.5">Data Size (KB):</label>
-                    <input type="number" id="benchmarkSize" value="1024" min="1" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-1 focus:ring-indigo-600 focus:border-transparent outline-none text-base shadow-sm"/>
-                </div>
                 <button id="startBenchmarkButton" class="w-full sm:w-auto bg-green-600 hover:bg-green-700 active:bg-green-800 text-white font-semibold py-3 px-6 rounded-lg transition duration-150 ease-in-out focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 shadow-md hover:shadow-lg">
-                    Start Benchmark
+                    Start GCS File Benchmark
                 </button>
             </div>
             <div id="benchmarkStatus" class="mt-4 text-base text-gray-700 bg-gray-100 p-4 rounded-lg min-h-[45px] shadow-inner">Benchmark status will appear here.</div>
@@ -66,7 +62,6 @@
         const sendButton = document.getElementById('sendButton');
         const statusDiv = document.getElementById('status');
         const peerInfoDiv = document.getElementById('peerInfo');
-        const benchmarkSizeInput = document.getElementById('benchmarkSize');
         const startBenchmarkButton = document.getElementById('startBenchmarkButton');
         const benchmarkStatusDiv = document.getElementById('benchmarkStatus');
 
@@ -187,19 +182,15 @@
         startBenchmarkButton.classList.add('opacity-50', 'cursor-not-allowed');
 
         startBenchmarkButton.onclick = function() {
-            const sizeKb = parseInt(benchmarkSizeInput.value, 10);
-            if (isNaN(sizeKb) || sizeKb <= 0) {
-                addMessage("Invalid benchmark data size.", "system");
-                benchmarkStatusDiv.textContent = "Invalid data size for benchmark.";
-                return;
-            }
+            const nominalSizeKb = 1024; // Default/indicative value, actual size determined by GCS file
+
             if (localUiSocket && localUiSocket.readyState === WebSocket.OPEN) {
                 localUiSocket.send(JSON.stringify({
                     type: "start_benchmark_send",
-                    size_kb: sizeKb
+                    size_kb: nominalSizeKb // Backend will use BENCHMARK_GCS_URL
                 }));
-                benchmarkStatusDiv.textContent = `Benchmark initiated to send ${sizeKb} KB...`;
-                addMessage(`Benchmark: Initiated send of ${sizeKb} KB.`, "system");
+                benchmarkStatusDiv.textContent = `Benchmark initiated to send file from GCS...`;
+                addMessage(`Benchmark: Initiated GCS file send.`, "system");
             } else {
                 addMessage("Cannot start benchmark. Not connected to local backend.", "system");
                 benchmarkStatusDiv.textContent = "Not connected to local backend.";
